
- #10170: Maintain more structural information in type-checking errors
  A mostly-internal change that preserves more information in errors
  during type checking; most significantly, it split the errors from
  unification, moregen, and type equality into three different types.
  (Antal Spector-Zabusky and Mekhrubon Tuarev, review by Leo White,
  Florian Angeletti, and Jacques Garrigue)

### Build system:

- #10289, #10406: Do not print option documentation in usage messages.
    (Pavlo Khrystenko, review by Gabriel Scherer, fix by Kate Deplaix)

- #9191, #10091, #10182: take the LDFLAGS variable into account, except on
  flexlink-using systems.
  (Gabriel Scherer, review by Sébastien Hinderer and David Allsopp,
   report by Ralph Seichter)

- #10135: Overhaul the FlexDLL bootstrap process. It's now fully integrated
  with the default build target and controlled by --with-flexdll which allows
  externally downloaded sources for FlexDLL to be specified. A separate
  non-shared version of the runtime is built, and shared artefacts are no longer
  built twice. When bootstrapping, any flexlink in PATH is now ignored and the
  Cygwin port also supports bootstrapping FlexDLL. flexlink.opt is automatically
  built and installed as part of opt.opt/world.opt.
  (David Allsopp, review by Sébastien Hinderer)

- #10156: configure script: fix sockets feature detection.
  (Lucas Pluvinage, review by David Allsopp and Damien Doligez)

- #10176: By default, call the assembler through the C compiler driver
  (Sébastien Hinderer, review by Gabriel Scherer, David Allsopp and Xavier
  Leroy)

- #10186: configure wasn't using library link flags when searching for
  network functions on systems where they're not in libc. Fix IPv6 and
  socklen_t detection on Windows.
  (Antonin Décimo, review by David Allsopp and Sébastien Hinderer)

- #10332, #10333: Generate lambda/runtimedef.ml correctly in Swedish locale.
  (the letter 'w' is not included in '[a-z]' in sv_SE.UTF-8)