@@ -385,6 +385,9 @@ Working version
   (Antal Spector-Zabusky and Mekhrubon Tuarev, review by Leo White,
   Florian Angeletti, and Jacques Garrigue)
 
+- #10307: Make build_other_constrs work with names instead of tags.
+  (Nicolas Chataing, review by Florian Angeletti)
+
 ### Build system:
 
 - #10289, #10406: Do not print option documentation in usage messages.
